# mc-rpc

./: Cargo.toml  build.rs  readme.md  schema-1.0.0.json  schema.json
schema_fetch/: Cargo.toml  readme.md
schema_fetch/src/: main.rs
src/: lib.rs
