[package]
name = "mc-rpc"
description = "Generated JSON RPC Bindings for Minecraft Server Management Protocol Client"
authors = ["VilleOlof"]
license = "MIT"
version = "0.1.1"
edition = "2024"
keywords = ["minecraft", "rpc", "json", "client"]
repository = "https://github.com/VilleOlof/mc-rpc"
exclude = ["schema_fetch"]

[dependencies]
pale = { git = "https://github.com/Xaeroxe/pale.git", rev = "17d249a18e075fb9978d63dd64c70d514a69a18d" }
serde = { version = "1.0", features = ["derive"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
serde_json = "1.0"
futures-util = "0.3.31"

[build-dependencies]
build-rs = "0.3.2"
serde_json = "1.0"

[workspace]
members = ["schema_fetch"]

[features]
default = ["all_versions"]
all_versions = [
    "protocol_version_1_0_0",
    "protocol_version_2_0_0"
]
protocol_version_1_0_0 = []
protocol_version_2_0_0 = []
