[package]
name = "mc-rpc"
description = "Generated JSON RPC Bindings for Minecraft Server Management Protocol Client"
authors = ["VilleOlof"]
license = "MIT"
version = "0.1.2"
edition = "2024"
keywords = ["minecraft", "rpc", "json", "client"]
repository = "https://github.com/VilleOlof/mc-rpc"
exclude = ["schema_fetch"]

[dependencies]
pale = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
serde_json = "1.0"
futures-util = "0.3.31"

[build-dependencies]
build-rs = "0.3.2"
serde_json = "1.0"

[workspace]
members = ["schema_fetch"]

[features]
default = ["latest_version"]
latest_version = [
    "v_2_0_0"
]
v_1_0_0 = []
v_2_0_0 = []
